# Cetacea-Proto

./: Cargo.toml  README.md
docs/: broadcast.md  client.md  control.md  discovery.md  name_resolution.md  presence.md  server_sync.md  sync.md
docs/extensions/: pubkey_login.md  user_v1.md
src/: error.rs  error_code.rs  lib.rs  util.rs
src/client/: client_check_v1.rs  mod.rs
src/client/auth/: jwt.rs  mod.rs  pubkey.rs  wallet.rs
src/client/events/: mod.rs  sync.rs
src/client/events/group/: mod.rs  room_v1.rs
src/client/user/: mod.rs  user_v1.rs
src/extensions/: mmm_v1.rs  mod.rs  nft_stickers_v1.rs  room_v1.rs  upload_v1.rs  user_v1.rs
src/server/: control.rs  discovery.rs  id.rs  io.rs  mod.rs  sync.rs
src/server/events/: broadcast.rs  mod.rs  state_and_presence.rs
