[package]
name = "cetacea-proto"
version = "0.1.0"
edition = "2021"
lisense = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp = "0"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
serde_json = "1"
thiserror = "1"