[package]
name    = "cetacea-proto"
version = "0.1.0"
edition = "2021"
lisense = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]


[dependencies]
rmp        = "0"
serde_json = "1"
rmp-serde  = "1"
thiserror  = "1"

wasm-bindgen       = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.5", optional = true }

serde = { version = "1", features = ["derive"] }
